--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Results summary component</title>
 
@@ -18,7 +25,7 @@
 <main>
   <div class="leftpanel">
     <h2>Your Result</h2>
-    <div class="score">76
+    <div class="score"><span class="bigscore">76</span>
       of 100
     </div>
     <h1>Great</h1>
@@ -27,27 +34,31 @@
   <div class="rightpanel">
     <h2>Summary</h2>
     <div class="reaction">
+      <img src="assets/images/icon-reaction.svg" alt="reaction_icon">
       Reaction
-      80 / 100
+      <span>80</span> / 100
     </div>
     <div class="memory">
+      <img src="assets/images/icon-memory.svg" alt="memory_icon">
       Memory
-      92 / 100
+      <span>92</span> / 100
     </div>
     <div class="verbal">
+      <img src="assets/images/icon-verbal.svg" alt="verbal_icon">
       Verbal
-      61 / 100
+      <span>61</span> / 100
     </div>
     <div class="visual">
+      <img src="assets/images/icon-visual.svg" alt="visual_icon">
       Visual
-      72 / 100
+      <span>72</span> / 100
     </div>
     <button>Continue</button>
   </div>
 </main>
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Kriss</a>.
-  </div>
+  </footer>
 </body>
 </html>
