--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <p>You scored higher than 65% of the people who have taken these tests.</p>
   </div>
   <div class="rightpanel">
+
     <h2>Summary</h2>
     <div class="reaction">
       <img src="assets/images/icon-reaction.svg" alt="reaction_icon">
@@ -53,8 +54,10 @@
       Visual
       <span>72</span> / 100
     </div>
-    <button>Continue</button>
+
+    <button class="continue">Continue</button>  
   </div>
+  
 </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
