Change panel colors + elemnts position Add gadients and opacity

--- a/index.html
+++ b/index.html
@@ -34,25 +34,30 @@
   <div class="rightpanel">
 
     <h2>Summary</h2>
-    <div class="reaction">
+
+    <div class="reaction summaryPart">
+      <span class="summarySection">
       <img src="assets/images/icon-reaction.svg" alt="reaction_icon">
-      Reaction
-      <span>80</span> / 100
+      Reaction</span>
+      <div class="summaryResult"><span class="summaryScore">80</span> / 100</div>
     </div>
-    <div class="memory">
+    <div class="memory summaryPart">
+      <span class="summarySection">
       <img src="assets/images/icon-memory.svg" alt="memory_icon">
-      Memory
-      <span>92</span> / 100
+      Memory</span>
+      <div class="summaryResult"><span class="summaryScore">92</span> / 100</div>
     </div>
-    <div class="verbal">
+    <div class="verbal summaryPart">
+      <span class="summarySection">
       <img src="assets/images/icon-verbal.svg" alt="verbal_icon">
-      Verbal
-      <span>61</span> / 100
+      Verbal</span>
+      <div class="summaryResult"><span class="summaryScore">61</span> / 100</div>
     </div>
-    <div class="visual">
+    <div class="visual summaryPart">
+      <span class="summarySection">
       <img src="assets/images/icon-visual.svg" alt="visual_icon">
-      Visual
-      <span>72</span> / 100
+      Visual</span>
+      <div class="summaryResult"><span class="summaryScore">72</span> / 100</div>
     </div>
 
     <button class="continue">Continue</button>  
