Add shadow, add button hoover

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 <body>
 <main>
+  <div class="frame">
   <div class="leftpanel">
     <h2>Your Result</h2>
     <div class="score"><span class="bigscore">76</span>
@@ -30,6 +31,7 @@
     </div>
     <h1>Great</h1>
     <p>You scored higher than 65% of the people who have taken these tests.</p>
+  </div>
   </div>
   <div class="rightpanel">
 
@@ -62,7 +64,6 @@
 
     <button class="continue">Continue</button>  
   </div>
-  
 </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
